# Agentic-Marketing

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  test.py
apps/web/: .env.example  README.md  next.config.mjs  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: CampaignDashboard.tsx  CustomCursor.tsx  GenerateForm.tsx  InteractiveCanvas.tsx  MountLoader.tsx
apps/web/lib/: backend.ts  types.ts
docker/: README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile
docs/: deployment.md
marketing_agent/: __init__.py  orchestrator.py  state.py
marketing_agent/api/: dependencies.py  main.py
marketing_agent/api/routes/: campaigns.py  health.py  leads.py  workflows.py
marketing_agent/capabilities/: __init__.py  analytics.py  base.py  content.py  outreach.py  planning.py  publishing.py  research.py  scoring.py
marketing_agent/configs/: settings.py
marketing_agent/core/: exceptions.py  logging.py
marketing_agent/core/utils/: normalize.py  phone.py
marketing_agent/models/: __init__.py  analytics.py  campaign.py  content.py  lead.py  product.py  publishing.py  research.py
marketing_agent/services/llm/: __init__.py  base.py  gemini.py  requirement_extractor.py
marketing_agent/workflows/: __init__.py  base.py  content_only.py  lead_generation.py  organic_campaign.py  performance_campaign.py
mode2/: broadcast_ad.py  image_generator.py
scripts/: README.md
supabase/: README.md  schema.sql  seed.sql
(+35 files in other folders)
