[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "agentic-marketing"
version = "0.1.0"
description = "Workflow-based AI Marketing Agency backend"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # HTTP client (publishers)
    "httpx>=0.27",
    # LLM
    "google-generativeai>=0.7",
    # Scraping
    "playwright>=1.44",
    "requests>=2.32",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
prod = [
    "gunicorn>=22",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["marketing_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
